--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-CLIENT_ID="y7c8gu59egmduep9tcwh"
-CLIENT_SECRET="aae978c6d8054d058da93364a873ee23"
+CLIENT_ID="eb3798411c9512ec08bxvc"
+CLIENT_SECRET="19a1966b0ed9412fa7d34769f3985b70"
